--- a/app/src/main/res/layout-v21/list_item_screen_shot_image.xml
+++ b/app/src/main/res/layout-v21/list_item_screen_shot_image.xml
@@ -4,22 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+        <variable
+            name="screenShotItem"
+            type="com.example.myapp.database.ScreenShotItem" />
+
+        <variable
+            name="appListViewModel"
+            type="com.example.myapp.page.applist.AppListViewModel" />
 
     </data>
-
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <FrameLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
-
-
-        <ImageButton
-            android:id="@+id/imageButton2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/delete_button_shape"
-            android:src="@drawable/ic_baseline_close_24"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
 
         <androidx.cardview.widget.CardView
             android:layout_width="wrap_content"
@@ -28,11 +24,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            app:cardCornerRadius="12dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:cardCornerRadius="12dp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -40,8 +32,8 @@
 
                 <ImageView
                     android:id="@+id/screen_shot_image"
-                    android:layout_width="93dp"
-                    android:layout_height="144dp"
+                    android:layout_width="120dp"
+                    android:layout_height="180dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -51,6 +43,14 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
 
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        <ImageButton
+            android:id="@+id/imageButton2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:translationZ="2dp"
+            android:layout_gravity="end"
+            android:background="@drawable/delete_button_shape"
+            android:src="@drawable/ic_baseline_close_24"
+            android:onClick="@{()->appListViewModel.removeScreenShotItem(screenShotItem)}"/>
+    </FrameLayout>
 </layout>
