--- a/app/src/main/res/layout/list_item_screen_shot.xml
+++ b/app/src/main/res/layout/list_item_screen_shot.xml
@@ -4,10 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
         <variable
             name="appListViewModel"
             type="com.example.myapp.page.applist.AppListViewModel" />
+
+        <import type="android.view.View"/>
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -32,31 +33,43 @@
                 android:layout_height="wrap_content"
                 android:background="#7E7E7E">
 
-                <Button
-                    android:id="@+id/screen_shot_button"
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/screen_shot_view"
+                    android:layout_width="300dp"
+                    android:layout_height="196dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="8dp"
+                    app:layout_constraintEnd_toStartOf="@+id/imageButton"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <ImageButton
+                    android:id="@+id/imageButton"
                     android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="4dp"
+                    android:background="@drawable/add_button_shape"
+                    android:onClick="@{()-> appListViewModel.changeEditability()}"
+                    android:src="@{appListViewModel.descriptionEditable? @drawable/ic_baseline_arrow_drop_up_36 :@drawable/ic_baseline_create_24}"
+                    app:layout_constraintBottom_toBottomOf="@+id/screen_shot_view"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@+id/screen_shot_view" />
+
+                <EditText
+                    android:id="@+id/screen_shot_description"
+                    android:layout_width="300dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:layout_marginBottom="8dp"
-                    android:background="@drawable/screen_shot_button_shape"
-                    android:drawableTop="@drawable/ic_baseline_image_search_48"
-                    android:text="@string/screenshot"
+                    android:background="#ffffff"
+                    android:inputType="textMultiLine"
+                    android:minLines="3"
+                    android:visibility="@{appListViewModel.descriptionEditable? View.VISIBLE : View.GONE}"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toEndOf="@+id/screen_shot_view"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/screen_shot_view"
-                    app:layout_constraintEnd_toStartOf="@id/screen_shot_button"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    />
+                    app:layout_constraintTop_toBottomOf="@id/screen_shot_view"/>
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
