--- a/app/src/main/res/layout/list_item_screen_shot.xml
+++ b/app/src/main/res/layout/list_item_screen_shot.xml
@@ -63,7 +63,8 @@
                     android:layout_marginBottom="8dp"
                     android:background="#ffffff"
                     android:inputType="textMultiLine"
-                    android:minLines="3"
+                    android:minLines="5"
+                    android:text="@={appListViewModel.screenShotDescription}"
                     android:visibility="@{appListViewModel.descriptionEditable? View.VISIBLE : View.GONE}"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
