changed color layout and app icon.

--- a/app/src/main/res/layout/list_item_screen_shot.xml
+++ b/app/src/main/res/layout/list_item_screen_shot.xml
@@ -31,7 +31,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="#7E7E7E">
+                android:background="@color/screenshot_background">
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/screen_shot_view"
