implemented going to web page function,and navigating title fragment after sharing function.

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -38,6 +38,9 @@
             <action
                 android:id="@+id/action_appListFragment_to_addAppListFragment"
                 app:destination="@id/addAppListFragment" />
+            <action
+                android:id="@+id/action_appListFragment_to_titleFragment"
+                app:destination="@id/titleFragment"/>
         </fragment>
         <fragment
             android:id="@+id/addAppListFragment"
