--- a/app/src/main/res/layout/title_item_card.xml
+++ b/app/src/main/res/layout/title_item_card.xml
@@ -44,6 +44,15 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
+                <ImageView
+                    android:id="@+id/check"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:src="@drawable/ic_baseline_check_24"
+                    android:visibility="invisible"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/shared_date" />
+
                 <TextView
                     android:id="@+id/shared_date"
                     android:layout_width="wrap_content"
