--- a/app/src/main/res/layout/list_item_shared_app.xml
+++ b/app/src/main/res/layout/list_item_shared_app.xml
@@ -55,10 +55,12 @@
 
                 <TextView
                     android:id="@+id/shared_app_review"
-                    android:layout_width="300dp"
+                    android:layout_width="270dp"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginEnd="8dp"
                     android:layout_marginBottom="8dp"
-                    android:background="#ffffff"
                     android:text="@{appCard.review}"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
