--- a/app/src/main/res/layout/list_item_shared_screen_shot.xml
+++ b/app/src/main/res/layout/list_item_shared_screen_shot.xml
@@ -46,7 +46,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:layout_marginBottom="8dp"
-                    android:background="#ffffff"
+                    android:layout_gravity="center_horizontal"
                     android:text="@{sharedAppListViewModel.screenShotDescription}"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
