changed package name.

--- a/app/src/main/res/layout/add_app_button.xml
+++ b/app/src/main/res/layout/add_app_button.xml
@@ -8,7 +8,7 @@
 
         <variable
             name="appListViewModel"
-            type="com.example.myapp.page.applist.AppListViewModel" />
+            type="com.on.smartphone.page.applist.AppListViewModel" />
     </data>
 
 
