--- a/app/src/main/res/layout/list_item_screen_shot_add_button.xml
+++ b/app/src/main/res/layout/list_item_screen_shot_add_button.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="appListViewModel"
-            type="com.example.myapp.page.applist.AppListViewModel" />
+            type="com.on.smartphone.page.applist.AppListViewModel" />
 
     </data>
 
