--- a/app/src/main/res/layout-v21/list_item_screen_shot_image.xml
+++ b/app/src/main/res/layout-v21/list_item_screen_shot_image.xml
@@ -6,11 +6,11 @@
     <data>
         <variable
             name="screenShotItem"
-            type="com.example.myapp.database.ScreenShotItem" />
+            type="com.on.smartphone.database.ScreenShotItem" />
 
         <variable
             name="appListViewModel"
-            type="com.example.myapp.page.applist.AppListViewModel" />
+            type="com.on.smartphone.page.applist.AppListViewModel" />
 
     </data>
     <FrameLayout
