--- a/app/src/main/res/layout/fragment_app_list.xml
+++ b/app/src/main/res/layout/fragment_app_list.xml
@@ -7,7 +7,7 @@
     <data>
         <variable
             name="appListViewModel"
-            type="com.example.myapp.page.applist.AppListViewModel" />
+            type="com.on.smartphone.page.applist.AppListViewModel" />
         <import type="android.view.View"/>
     </data>
 
