--- a/app/src/main/res/layout/title_item_app_image.xml
+++ b/app/src/main/res/layout/title_item_app_image.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="appCard"
-            type="com.example.myapp.database.AppCard" />
+            type="com.on.smartphone.database.AppCard" />
     </data>
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="wrap_content"
